--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
@@ -12,9 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^5.0.3",
     "@types/node": "^24.2.1",
+    "cep-promise": "^4.4.1",
+    "express": "^5.1.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.9.2",
+    "validation-br": "^1.5.2"
   }
 }
